data/diff_tests/wasmtime/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1224.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\95\80\80\80\00\01\03\65\6e\76\0d\69"
    "\6d\70\6f\72\74\65\64\5f\66\75\6e\63\00\00\03\82"
    "\80\80\80\00\01\00\07\88\80\80\80\00\01\04\74\65"
    "\73\74\00\01\0a\93\80\80\80\00\01\8d\80\80\80\00"
    "\01\01\7f\03\7f\10\00\41\01\0d\00\0b\0b"
  )
""
)